fix compose color in dark mode

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -66,6 +66,7 @@ body {
   grid-row: 1;
   justify-self: stretch;
   padding: 0.3em;
+  color: var(--tweet-text-primary-color);
 }
 .tweet_compose .editor {
   resize: none;
